chore: root build.gradle과 monolithic build.gradle 그리고 Main쪽 변경